In-Progress: Scythe and General Reworks
Initial attempt to add Scythe farming tool

Additions:
-Scythe in all 6 item tiers w/ associated JSON config files
-New utility classes
--BlockInteractHandler: will handle onRightClick functionality for the Dredge, Scythe, LBJ, Nethersaw, and Ditch-Witch. Currently unimplemented.
--BlockfaceRayTracer: static utility class for handling the raycasting and tracing  required by all of my Bulktools. Removed the raycast calls from previously implemented handlers to use this class instead.
--FunctionalIntReferenceHolder: class for future use of TileEntities

Changes:
-Homogenized ModItemTiers into only 6 tiers across all Bulktools, just as vanilla MC does for tools
-Altered implementation of BlockBreakHandler to account for Scythe-harvestable crops as well as its havestable blocks. Still compatible with previous code.
-Altered BlockBreakHandler to use static utility class BlockfaceRayTracer as its method of performing raycasted calculations, as the new BlockInteractHandler will need to use the same functions.
-Obsidian tier crafting recipes now use Blaze Rods as handles and have new textures reflecting that.
-Tentatively speaking, the Alloy Table is removed and no longer planned.

Issues:
-Breaking crops and then breaking a normal block w/ the Scythe leads to whatever block was just broken showing up instead of a Farmland block.
-None of the right-click functionality currently working
-Crops not dropping reliably.

--- a/src/main/resources/assets/agbulkminer/lang/en_us.json
+++ b/src/main/resources/assets/agbulkminer/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-	"block.agbulkminer.compressed_obsidian": "Compressed Obsidian",
+	"block.agbulkminer.compressed_obsidian": "Hardened Obsidian",
 	"block.agbulkminer.obsidian_block": "Obsidian Block",
 	"block.agbulkminer.comp_block": "Material Compressor",
 	"item.agbulkminer.stone_hammer": "Stone Hammer",
@@ -13,5 +13,11 @@
 	"item.agbulkminer.gold_dredge": "Gold Dredge",
 	"item.agbulkminer.obsidian_dredge": "Obsidian Dredge",
 	"item.agbulkminer.diamond_dredge": "Diamond Dredge",
-	"item.agbulkminer.netherite_dredge": "Netherite Dredge"
+	"item.agbulkminer.netherite_dredge": "Netherite Dredge",
+	"item.agbulkminer.stone_scythe": "Stone Scythe",
+	"item.agbulkminer.iron_scythe": "Iron Scythe",
+	"item.agbulkminer.gold_scythe": "Gold Scythe",
+	"item.agbulkminer.obsidian_scythe": "Obsidian Scythe",
+	"item.agbulkminer.diamond_scythe": "Diamond Scythe",
+	"item.agbulkminer.netherite_scythe": "Netherite Scythe"
 }
